<resources>
    <string name="app_name">超级城市通</string>
    <string name="hometitle">延庆在线</string>
    <string name="homehead">头条</string>
    <string name="homenaonao">闹闹</string>
    <string name="homeshequ">社区</string>
    <string name="homelife">生活</string>
    <string name="homefind">发现</string>
    <string name="smvideo">小视频</string>
    <string name="selectphoto">从手机相册选择</string>
    <string name="quxiao">取消</string>
</resources>
