<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="citypass.jiyun.com.citypass.control.activity.HomeActivity">

    <FrameLayout
        android:id="@+id/home_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/home_radiogroup">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/home_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="5">

        <RadioButton
            android:checked="true"
            android:id="@+id/home_headbut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_btn_head"
            android:gravity="center"
            android:text="@string/homehead" />

        <RadioButton
            android:id="@+id/home_naobut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_btn_naonao"
            android:gravity="center"
            android:text="@string/homenaonao" />

        <RadioButton
            android:id="@+id/home_locationbut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_btn_location"
            android:gravity="center"
            android:text="@string/homeshequ" />

        <RadioButton
            android:id="@+id/home_lifebut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_btn_life"
            android:gravity="center"
            android:text="@string/homelife" />

        <RadioButton
            android:id="@+id/home_findbut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_btn_find"
            android:gravity="center"
            android:text="@string/homefind" />
    </RadioGroup>

</RelativeLayout>
